--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -4,6 +4,10 @@
 a {
 	color: blue;
 }
+h1 {
+	margin-bottom: 10px;
+	font-size: 20px;
+}
 body {
 	width: 1000px;
 }
@@ -75,7 +79,7 @@ table {
 .preHidden {
 	display: none;
 }
-#groupSelectForm {
+.detailSelectForm {
 	background-color: lightgray;
 	border: 4px solid grey;
 	position: fixed;
