Fixes #68 Fixes #69 Fixes #70

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
 	margin:9px;
 	padding:5px;
 }
-.fail {
+.fail, .error {
 	list-style:none outside none;
 	background-color:lightCoral;
 	margin:9px;
