Fixes #54 glitch from previous set. Also some style

--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -42,7 +42,11 @@ body {
 	min-height:80%;	
 }
 td{
-	border:1px solid black;	
+	border:1px solid black;
+	vertical-align: middle;	
+}
+tr {
+	height: 1.4em;
 }
 thead {
 	font-weight: bold;
