La till en lama
Signed-off-by: Jesper Pro <jesper.gladh@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
     text-align: right;
     height: 187px;
     width: 899px;
-    background-image: url('/images/bannerNPG2013.jpg');
+    background-image: url('/images/qeFcY.jpg');
     background-repeat: no-repeat;
 }
 #login_form{
