--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
     text-align: right;
     height: 187px;
     width: 899px;
-    background-image: url('/images/qeFcY.jpg');
+    background-image: url('/images/NPG banner 2014.jpg');
     background-repeat: no-repeat;
 }
 #login_form{
