Ny banner, orange.
Signed-off-by: Jesper Pro <jesper.gladh@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     text-align: right;
     height: 187px;
     width: 899px;
-    background-image: url('/images/NPG2014 header.jpg');
+    background-image: url('/images/NPG2014 headerOrange.jpg');
     background-repeat: no-repeat;
 }
 #login_form{
